--- a/index.html
+++ b/index.html
@@ -1,1 +1,30 @@
-Hello World
+<!DOCTYPE html>
+<html>
+
+<head>
+  <title>Yomei Shaw</title>
+
+  <style type="text/css">
+    p { max-width: 65em; }
+    body { background-color: #f8f0ff}
+    h1 { color: #4d3319}
+   </style>
+</head>
+  
+  <body>
+    
+    <!-- <img src="mccann.jpg" align="left" style="width:125pt; padding-right:12pt"> -->
+    <h1> Yomei Shaw </h1>
+    <p>Yomei Shaw currently works as a Research Fellow for <a href="https://www.arthritis-research.org">Forward, The National Data Bank for Rheumatic Diseases</a>.
+      Yomei does research in Health Psychology, Epidemiology and Public Health.
+      Her current projects are on smartphone app use among patients in the Swiss Clinical Quality Management in Rheumatic Diseases Registry (SCQM), and describing the burden of disease in rheumatoid arthritis using qualitative and mixed methods research. Email: yomei at ndb dot org </p>
+    
+    <p>
+      For her list of publications, please refer to <nobr><a href="https://scholar.google.com/citations?user=2Rz8DOQAAAAJ" rel="noopener noreferrer" style="vertical-align:top;">
+	  <img src="https://scholar.google.ch/favicon-png.ico"  style="width:1em;">Google Scholar</a>.
+    </p>
+
+<!--    <h1>Projects</h1> -->
+  
+  </body>
+</html>
